--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                 <div class="Slides">
                     <div class="numbertext">3 / 7</div>
-                    <img src="images/placeholder.png" style="width:100%">
+                    <img src="https://cdn.akamai.steamstatic.com/steam/apps/730/ss_118cb022b9a43f70d2e5a2df7427f29088b6b191.600x338.jpg?t=1668125812" style="width:100%">
                     <div class="text">CS:GO</div>
                     <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
                     <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
@@ -103,7 +103,7 @@
                         <img class="demo cursor" src="images/peter/mw2_slide4.jpg" style="width:100%" onclick="currentSlide(2)" title="Modern Warfare 2">
                     </div>
                     <div class="column">
-                        <img class="demo cursor" src="images/placeholder.png" style="width:100%" onclick="currentSlide(3)" title="CS:GO">
+                        <img class="demo cursor" src="https://cdn.akamai.steamstatic.com/steam/apps/730/ss_118cb022b9a43f70d2e5a2df7427f29088b6b191.600x338.jpg?t=1668125812" style="width:100%" onclick="currentSlide(3)" title="CS:GO">
                     </div>
                     <div class="column">
                         <img class="demo cursor" src="images/balint/achatter.png" style="width:100%" onclick="currentSlide(4)" title="Syndicate">
