--- a/unturned.html
+++ b/unturned.html
@@ -47,62 +47,86 @@
                     <video id="autoplayvid" width="100%" height="auto" autoplay muted controls loop>
                         <source src="images/akos/unturned/1. video.webm" type="video/webm">
                         Your browser does not support the video tag.
-                    </video> 
+                    </video>
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">2 / 12</div>
                     <img src="images/akos/unturned/real.png" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">3 / 12</div>
                     <img src="images/akos/unturned/2.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">4 / 12</div>
                     <img src="images/akos/unturned/3.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">5 / 12</div>
                     <img src="images/akos/unturned/4.jpg" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">6 / 12</div>
                     <img src="images/akos/unturned/cave1.png" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">7 / 12</div>
                     <img src="images/akos/unturned/cave2.png" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">8 / 12</div>
                     <img src="images/akos/unturned/lagoon.png" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">9 / 12</div>
                     <img src="images/akos/unturned/military.png" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="Slides">
                     <div class="numbertext">10 / 12</div>
                     <img src="images/akos/unturned/ship.png" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
                 
                 <div class="Slides">
                     <div class="numbertext">11 / 12</div>
                     <img src="images/akos/unturned/store.png" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
                 
                 <div class="Slides">
                     <div class="numbertext">12 / 12</div>
                     <img src="images/akos/unturned/sunset.png" style="width:100%">
+                    <img class="leftswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(-1)"></img>
+                    <img class="rightswipe" src="images/akos/index/sidearrow.png" onclick="plusSlides(1)"></img>
                 </div>
 
                 <div class="row">
